@@ -1,3 +1,9 @@
+Fri Dec 14 21:25:58 GMT 2012  Olly Betts <olly@survex.com>
+
+	* Makefile.am,languages/Makefile.mk,queryparser/Makefile.mk,
+	  tests/Makefile.am: In automake, INCLUDES is now deprecated in favour
+	  of AM_CPPFLAGS so update to use the latter.
+
 Tue Nov 27 05:39:30 GMT 2012  Olly Betts <olly@survex.com>
 
 	* examples/quest.cc: Need <algorithm> for lower_bound().
